--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   firebase_crashlytics: ^3.3.3
   go_router: ^10.1.0
   receive_intent: ^0.2.4
+  dropdownfield2: ^1.0.7
 
 dev_dependencies:
   flutter_test:
