--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,14 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   dropdownfield2: ^1.0.7
+  carousel_slider: ^4.2.1
+  nb_utils: ^6.0.4
+  path_drawing: ^1.0.1
+  cached_network_image: ^3.3.0
+  flutter_svg: ^2.0.7
+  clippy_flutter: ^2.0.0-nullsafety.1
+  dio: ^5.3.3
+  material_floating_search_bar_2: ^0.5.0
 
 dev_dependencies:
   flutter_test:
@@ -105,6 +113,8 @@ flutter:
     - assets/map_style.json
     - assets/maps_style.json
     - assets/map_style_black.json
+    - assets/images/marketPlace/
+    - assets/images/food/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
