--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,7 +114,7 @@ flutter:
     - assets/maps_style.json
     - assets/map_style_black.json
     - assets/images/marketPlace/
-    - assets/images/food/
+    - assets/images/marketPlace/food/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
