--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   clippy_flutter: ^2.0.0-nullsafety.1
   dio: ^5.3.3
   material_floating_search_bar_2: ^0.5.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
