--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,6 +116,8 @@ flutter:
     - assets/map_style_black.json
     - assets/images/marketPlace/
     - assets/images/marketPlace/food/
+    - lib/models/marketPlaceModels/testFolder/images/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
