--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,8 @@ dependencies:
   dio: ^5.3.3
   material_floating_search_bar_2: ^0.5.0
   provider: ^6.0.5
-
+  banner_carousel: ^1.2.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
